# arrowviz_2026

./: README.md  pyproject.toml
src/arrowviz_2026/: __init__.py  ast.py
src/arrowviz_2026/recognizers/: __init__.py  shapes.py
tests/: descriptions.txt
tests/recognizers/: __init__.py  test_shapes.py
