[project]
name = "arrowviz-2026"
version = "0.1.0"
description = "A library to parse schematic pictures"
readme = "README.md"
authors = [
    { name = "Johannes Riecken", email = "johannes.riecken@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "opencv-python>=4.13.0.92",
]

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"
